raffia/tests/error/selectors/trailing-comma.snap
---
source: raffia/tests/error.rs
---
error: simple selector is expected
  ┌─ trailing-comma.css:1:4
  │
1 │ a, {}
  │    ^


